<resources>
    <string name="app_name">AquaPath</string>

    <string name="wave_background">Wave background pattern</string>
    <string name="hero_title">Small Steps,\nBig Waves.</string>
    <string name="hero_subtitle">AquaPath unites volunteers, donors, and clean-up \nevents to help protect our oceans 🌊 \nJoin the movement today!</string>

    <string name="stat_volunteers">Volunteers</string>
    <string name="stat_events">Events</string>
    <string name="stat_raised">Donations</string>

    <string name="button_volunteer">Become a Volunteer</string>
    <string name="button_join_event">Join Cleanup Event</string>

    <string name="featured_story">Featured Story 🌟</string>
    <string name="coral_story_image">Image of restored coral beds</string>
    <string name="coral_story_title">New Coral Beds Restored!</string>
    <string name="coral_story_description">Thanks to our amazing team, we planted 50 new coral fragments in the bay area...</string>
    <string name="turtle_story_image">Image of a sea turtle being released</string>
    <string name="turtle_story_title">Successful Sea Turtle Release!</string>
    <string name="turtle_story_description">After weeks of rehabilitation, we successfully released a rescued Green Sea Turtle back into the ocean...</string>
    <string name="cleanup_story_image">Volunteers picking up trash on a beach</string>
    <string name="cleanup_story_title">Local Beach Cleanup Success!</string>
    <string name="cleanup_story_description">Hundreds of volunteers removed over 500 lbs of plastic and debris in a single-day event.</string>

    <string name="donate_prompt">Help fund ocean cleanup projects 💙</string>
    <string name="button_donate">Donate Now</string>


</resources>
